prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/assign_inside_forbidden.nut
// EXPECT_ERROR: "is forbidden"
local x = 5
if (x = 10) {
    print("oops")
}
